Fixed issue w footer overlapping content.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,10 +113,10 @@ tr:hover {
 }
 
 #footer {
-  /* background-color: white; */
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%; 
   text-align: center;
+  height: 5em;
+  position: static;
 }
